Fixed: Created a new class ButtonBarX to fix the button bar alignment in ProjectSelection stage.

--- a/marathon-core/src/main/resources/net/sourceforge/marathon/fx/api/css/marathon.css
+++ b/marathon-core/src/main/resources/net/sourceforge/marathon/fx/api/css/marathon.css
@@ -162,3 +162,6 @@
 .marathon-input #ErrorMessageLabel{
 	-fx-padding: 0 0 0 5;
 }
+.project-selection #ProjectSelectionButtonbar{
+	-fx-padding: 2.5 5 2.5 5;
+}
